--- a/style.css
+++ b/style.css
@@ -7,8 +7,21 @@ body{
 }
  
 #inputSection{
-    height: 20%;
+    height: 5%;
     margin-top: 100px;
+}
+
+ul{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 50px;
+}
+
+div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 li{
@@ -19,4 +32,14 @@ li{
     border-radius: 9999px;
     background-color: paleturquoise;
     margin-bottom: 10px;
+}
+
+h2{
+    text-align: center;
+    margin-bottom: 5px;
+}
+
+img{
+    height: 200px;
+    width: 400px;
 }
